[package]
name = "publicise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive"] }
prettyplease = "0.2.12"
syn = { version = "2.0.29", default-features = false, features = ["visit-mut", "parsing", "full"] }
